// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e::projectsFeedback should fail when missing props 1`] = `
Object {
  "rubric": [ValidatorError: Path \`rubric\` is required.],
  "rubricResults": [ValidatorError: Path \`rubricResults\` is required.],
}
`;

exports[`e2e::projectsFeedback should fail when project, cohort or reviewerSurvey not ObjectId 1`] = `
Object {
  "cohort": [CastError: Cast to ObjectID failed for value "lim-2019-01-bc-js-09" at path "cohort"],
  "project": [CastError: Cast to ObjectID failed for value "cipher" at path "project"],
  "reviewerSurvey": [CastError: Cast to ObjectID failed for value "xxxx" at path "reviewerSurvey"],
  "rubric": [ValidatorError: Path \`rubric\` is required.],
  "rubricResults": [ValidatorError: Path \`rubricResults\` is required.],
}
`;
